kustomize/apps/controller/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-controller-hls
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /controller-hls
    forceSlash: false
