kustomize/apps/controller/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: controller-api
  namespace: vms
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`example.com`) && PathPrefix(`/controller/api`)
    services:
    - kind: Service
      name: controller-api
      port: 80
      scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: control-plane-hls
  namespace: vms
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`example.com`) && PathPrefix(`/controller-hls`)
    middlewares:
    - name : cors-middleware
    - name : strip-prefix-controller-hls
    services:
    - kind: Service
      name: controller-control-plane-hls
      port: 8888
      scheme: http
